<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <!-- Email -->
        <AutoCompleteTextView
            android:id="@+id/input_email"
            android:nextFocusUp="@id/input_email"
            android:nextFocusForward="@+id/input_password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="5dp"
            android:background="@drawable/edit_text_selector"/>

        <!-- Password -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:padding="5dp"
                android:background="@drawable/edit_text_selector"/>


            <TextView
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_show_password"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_gravity="right|center_vertical"/>

        </FrameLayout>

        <!-- Log in Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/action_log_in"/>

        <!-- Sign up -->
        <TextView android:id="@+id/link_signup"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_to_sign_up"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18dp"/>

        <!-- Reset Password -->
        <TextView android:id="@+id/link_forgot_password"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_forgot_password"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </LinearLayout>
</ScrollView>