<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/choose_gender"
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:gravity="center"/>

    <View
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/male"
            android:padding="10dp"
            android:buttonTint="@color/base" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:padding="10dp"
            android:text="@string/female"
            android:buttonTint="@color/base"/>

    </RadioGroup>

    <include layout="@layout/dialog_prefs_btns" />


</LinearLayout>



